@@ -103,16 +103,6 @@
     </dependencies>
 
     <!--TestFX configuration for headless and graphical tests-->
-    <properties>
-        <commonArgs>
-            --add-opens=javafx.graphics/com.sun.glass.ui=org.testfx.core
-            --add-opens=javafx.graphics/com.sun.javafx.application=org.testfx.core
-            --add-exports=javafx.graphics/com.sun.javafx.application=org.testfx.core
-            --add-exports=javafx.graphics/com.sun.glass.ui=org.testfx.monocle
-            --add-exports=javafx.graphics/com.sun.javafx.util=org.testfx.monocle
-            --add-exports=javafx.base/com.sun.javafx.logging=org.testfx.monocle
-        </commonArgs>
-    </properties>
     <profiles>
         <profile>
             <id>headless-tests</id>
@@ -132,7 +122,7 @@
                             <argLine>
                                 -Dtestfx.headless=true
                                 -Djava.awt.headless=true
-                                ${commonArgs}
+                                ${commonTestFXArgs}
                             </argLine>
                             <useModulePath>true</useModulePath>
                             <forkCount>1</forkCount>
@@ -158,7 +148,7 @@
                         <configuration>
                             <argLine>
                                 -Dtestfx.headless=false
-                                ${commonArgs}
+                                ${commonTestFXArgs}
                             </argLine>
                             <useModulePath>true</useModulePath>
                             <forkCount>1</forkCount>
